--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ body {
   margin: 0;
   font-family:  "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.5;
   color: #161616;
   text-align: left;
@@ -3976,6 +3976,7 @@ input[type=button].btn-block {
   font-size: 1.25rem;
   line-height: inherit;
   white-space: nowrap;
+  font-weight: 400;
 }
 .navbar-brand:hover, .navbar-brand:focus {
   text-decoration: none;
@@ -10017,7 +10018,7 @@ h1 {
 
 p.lead {
   font-size: 1.15rem;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .personal-info{
@@ -10040,13 +10041,16 @@ p.lead {
 }
 .personal-skill {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 400;
+  font-weight: 500;
   font-size: 1.1rem;
+}
+.certificates-list {
+  margin-left: 25px;
 }
 
 
 #sideNav .navbar-nav .nav-item .nav-link {
-  font-weight: 800;
+  font-weight: 600;
   letter-spacing: 0.05rem;
   text-transform: uppercase;
 }
@@ -10202,7 +10206,6 @@ section.resume-section .resume-section-content {
   line-height: 3rem;
 }
 .portfolio-modal .modal-content p.item-intro {
-  font-style: italic;
   margin-bottom: 2rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
