--- a/css/styles.css
+++ b/css/styles.css
@@ -10074,6 +10074,7 @@ p.lead {
     display: flex;
     margin: auto auto 0;
     padding: 0.5rem;
+    background-size: cover;
   }
   #sideNav .navbar-brand .img-profile {
     max-width: 10rem;
