solves conflicts between versions. ready to be hosted after changing personal information

--- a/css/styles.css
+++ b/css/styles.css
@@ -10069,6 +10069,8 @@ p.lead {
     flex-direction: column;
     width: 17rem;
     height: 100vh;
+    /* background-size: cover;
+    background-repeat: no-repeat; */
   }
   #sideNav .navbar-brand {
     display: flex;
